# damask-parse

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.chglog/: CHANGELOG.tpl.md  RELEASE.tpl.md  config.yml
.github/workflows/: release.yaml
damask_parse/: __init__.py  _version.py  particles.py  quats.py  readers.py  rotation.py  utils.py  writers.py
damask_parse/legacy/: __init__.py  readers.py  writers.py
tests/: test_geom.py  test_readers.py  test_spectral.py
