[tool.poetry]
name = "damask-parse"
version = "0.2.29"
description = "Input file writers and output file readers for the crystal plasticity code DAMASK."
authors = [
    "Adam Plowman <adam.plowman@manchester.ac.uk>",
    "Michael Atkinson",
    "Guy Bowker",
    "Gerard Capes"
]
license = "MPL 2.0"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
numpy = [
    {version = "^1.24.4", python = "<3.9"},
    {version = ">=1.26.4", python = ">=3.9"},
]
scipy = [
    {version = "^1.10.1", python = "<3.9"},
    {version = ">=1.13.0", python = ">=3.9"},
]
pandas = "^2.0.3"
h5py = "^3.11.0"
damask = "^3.0.0"
"ruamel.yaml" = "^0.18.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
commitizen = "2.20.3"
pre-commit = "2.16.0"
ipykernel = "^6.29.5"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.29"
tag_format = "v$version"
version_files = [ 
    "pyproject.toml:version",
    "damask_parse/_version.py"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
